--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,9 @@
   "tabWidth": 2,
   "singleQuote": false,
   "jsxSingleQuote": false,
-  "plugins": ["prettier-plugin-tailwindcss", "prettier-plugin-organize-imports", "prettier-plugin-sort-imports"]
+  "plugins": [
+    "prettier-plugin-tailwindcss",
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-sort-imports"
+  ]
 }
