--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint .",
+    "lint": "eslint . && prettier . --check",
     "preview": "vite preview",
-    "format": "prettier . --write"
+    "format": "eslint . --fix && prettier . --write"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.15.0",
     "prettier": "3.5.3",
     "prettier-plugin-organize-imports": "^4.1.0",
