--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BACKEND_URL=http://localhost:8000
-VITE_WS_URL=ws://localhost:8000
+VITE_WS_URL=ws://7c74-152-59-164-158.ngrok-free.app/ws/chat
+
