--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "eslint . --fix && prettier . --write"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
     "class-variance-authority": "^0.7.1",
