--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "recharts": "^2.15.1",
