--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "eslint . --fix && prettier . --write"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
@@ -23,7 +25,8 @@
     "react-router": "^7.3.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss": "^4.0.14",
-    "tw-animate-css": "^1.2.4"
+    "tw-animate-css": "^1.2.4",
+    "vibemeter-frontend": "file:"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.0",
