--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/vite": "^4.0.14",
+    "@tanstack/react-query": "^5.72.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
@@ -43,6 +44,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-redux": "^9.2.0",
     "react-router": "^7.3.0",
     "recharts": "^2.15.1",
