--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = http://localhost:8000
-VITE_WS_URL = ws://localhost:8000
+VITE_BACKEND_URL = http://13.203.217.115
+VITE_WS_URL = ws://13.203.217.115
